--- a/Function practice.ipynb
+++ b/Function practice.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "id": "6fbcb4ea",
    "metadata": {},
    "outputs": [
@@ -10,17 +10,17 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Enter the value : 41\n",
-      "Enter the value : 30\n"
+      "Enter the value : 23\n",
+      "Enter the value : 56\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "71"
+       "79"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "id": "d823331f",
    "metadata": {},
    "outputs": [
@@ -43,9 +43,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Enter the value : 3\n",
-      "Enter the value : 9\n",
-      "12\n"
+      "Enter the value : 45\n",
+      "Enter the value : 85\n",
+      "130\n"
      ]
     }
    ],
@@ -60,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "id": "82fb6555",
    "metadata": {},
    "outputs": [
@@ -70,7 +70,7 @@
        "30"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -83,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "id": "e42aa77d",
    "metadata": {},
    "outputs": [
@@ -91,16 +91,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Enter the value : 100\n"
+      "Enter the value : 20\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "120"
+       "40"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -115,7 +115,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 5,
    "id": "56f3e719",
    "metadata": {},
    "outputs": [
@@ -123,14 +123,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Enter the value : 77\n",
+      "Enter the value : 45\n",
       "The no. is Odd\n",
       "*********************\n",
-      "Enter the value : 66\n",
+      "Enter the value : 56\n",
       " The no. is Even\n",
       "*********************\n",
-      "Enter the value : 89\n",
-      "The no. is Odd\n",
+      "Enter the value : 78\n",
+      " The no. is Even\n",
       "*********************\n"
      ]
     }
@@ -150,7 +150,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 6,
    "id": "336f7f8f",
    "metadata": {},
    "outputs": [
@@ -175,7 +175,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 7,
    "id": "3e9b1ddd",
    "metadata": {},
    "outputs": [
@@ -210,7 +210,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 8,
    "id": "f9b4f080",
    "metadata": {},
    "outputs": [
@@ -240,7 +240,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 9,
    "id": "e3fd77b5",
    "metadata": {},
    "outputs": [
@@ -265,7 +265,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 10,
    "id": "3e4cdc73",
    "metadata": {},
    "outputs": [
@@ -273,11 +273,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Enter the value : 2\n",
-      "Enter the value : 3\n",
-      "addition :  5\n",
-      "subtraction :  -1\n",
-      "multiplication : 6\n"
+      "Enter the value : 98\n",
+      "Enter the value : 65\n",
+      "addition :  163\n",
+      "subtraction :  33\n",
+      "multiplication : 6370\n"
      ]
     }
    ],
@@ -302,7 +302,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 11,
    "id": "8ba4f088",
    "metadata": {},
    "outputs": [
@@ -327,7 +327,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 12,
    "id": "acc03c5c",
    "metadata": {},
    "outputs": [
@@ -356,6 +356,70 @@
     "sub()\n",
     "    "
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "fdca5813",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "n=[]\n",
+    "def school():\n",
+    "    for x in range(3):\n",
+    "        name=input(\"Enter the name : \")\n",
+    "        n.append(name)\n",
+    "    return n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "0f5000a3",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Enter the name : sayali\n",
+      "Enter the name : asfiya\n",
+      "Enter the name : pooja\n"
+     ]
+    }
+   ],
+   "source": [
+    "sh=school()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "147b25ab",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "sayali\n",
+      "asfiya\n",
+      "pooja\n"
+     ]
+    }
+   ],
+   "source": [
+    "for x1 in sh:\n",
+    "    print(x1)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "254a4db8",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
